--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
         <div class="contact-info">
             <h2>📞 Contacto</h2>
             <p><strong>Erick Omar Ramírez Mendoza</strong></p>
-            <p>📧 [Tu Email] | 📱 [Tu Teléfono]</p>
-            <p>📍 Estado de México</p>
+            <p>📧 [Tu Email] | 📱 [722111012]</p>
+            <p>📍 Estado de México, Los Sauses</p>
             <p style="margin-top: 15px; font-style: italic;">
                 "Listo para demostrar mis habilidades y contribuir al éxito de su empresa"
             </p>
